Sat Dec 21 17:37:26 CST 2002 Linas Vepstas <linas@linas.org>

	* ghtml.c: Printing bugfix for Solaris, as per Derek Atkins
	  <warlord@mit.edu>
	* ghtml.c: buffer overflow pseudofix (ppossible cause of core dump??)
	* journal.c: avoid hang due to memory management conflict
		  
2002-06-16  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* glade/journal.glade: added handling of signal "destroy"
	so that closing by clicking on the "close" button or
	by closing the windows trough the windows manager works the same

Mon Dec 17 22:18:17 CST 2001 Linas Vepstas <linas@linas.org>

	* timer.c: failed to redraw main window when clock ticks!
	* prefs.c: core dump when changing preferences
	* help/*: remove this documentation directory entirely

Mon Dec 10 10:48:28 CST 2001 Linas Vepstas <linas@linas.org>

	* proj.c: fix core dump

Fri Nov 30 12:26:23 CST 2001 Linas Vepstas <linas@linas.org>

	* proj.h, proj.c, props-invl.c: bug fix for coredump
	* props-task.c: fix redraw bug
	* journal.c, task_opup.glade, interval_popup.glade:
	  add new popup menu entries.
	* gtt.sgml: add list of new features

Wed Nov 28 12:12:44 CST 2001 Linas Vepstas <linas@linas.org>

	* Makefile.am, journal.c: patch from Derek Atkins
	  to search 'unusual' install paths for data directories.

	* proj.c: remove conflicting libintl.h; bugfix for 
	  clear_daily_counter

Fri Nov 23 17:18:14 CST 2001 Linas Vepstas <linas@linas.org>

        * doc/C/gtt.sgml: update maintainer list, add warning
          about out-of-date documentation.

	* *.c, glade/*.glade: rename "Task" to the more 
          correct "Diary Entry"

Mon Nov  5 13:23:02 CST 2001 Linas Vepstas <linas@linas.org>

	* ghtml.c: replace obsolete guile macro with supported
	  function. (needed for guile-1.5 comaptibility).

Thu Oct 18 16:31:35 CDT 2001  Linas Vepstas <linas@linas.org>

        * main.c, file-io.c patch from Jeff Putsch
          <putsch@fiber.mxim.com> to fix coredump on initial
          startup.
